# Tramonto

./: CMakeLists.txt  COPYRIGHT  INSTALL_LIBRARIES  INSTALL_TRAMONTO  INSTALL_WINDOWS  Makefile.am  Makefile.export.tramonto.in  Makefile.in  README  README_CYGWIN  RELEASE_NOTES  aclocal.m4  configure  configure.ac  configure.in  tram.html
Examples/: CMakeLists.txt  Makefile.am  Makefile.in  test_script
Examples/BC10_FMT1_WCA_ELEC_3D/: CMakeLists.txt  README
Examples/BC11_FMT1_WCA_ELEC_3D/: CMakeLists.txt  README
Examples/BC12_FMT1_WCA_ELEC_3D/: CMakeLists.txt  README
Examples/BC1_FMT1_WCA_ELEC_2D/: CMakeLists.txt  README
Examples/BC2_FMT1_WCA_ELEC_2D/: CMakeLists.txt  README
Examples/BC3_FMT1_WCA_ELEC_2D/: CMakeLists.txt  README
Examples/BC4_FMT1_WCA_ELEC_2D/: CMakeLists.txt  README
Examples/BC5_FMT1_WCA_ELEC_2D/: CMakeLists.txt  README
Examples/BC6_FMT1_WCA_ELEC_2D/: CMakeLists.txt  README
Examples/BC7_FMT1_WCA_ELEC_3D/: CMakeLists.txt  README
Examples/BC8_FMT1_WCA_ELEC_3D/: CMakeLists.txt  README
Examples/BC9_FMT1_WCA_ELEC_3D/: CMakeLists.txt  README
Examples/BULK1_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/BULK2_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/BULK3_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/BULK4_MIX_FMT3_WCA_WJDC_1D/: CMakeLists.txt  README
Examples/BULK5_MIX_FMT3_WCA_WJDC_1D/: CMakeLists.txt  README
Examples/BULK6_MIX_FMT3_WCA_WJDC_1D/: CMakeLists.txt  README  lin_2mer
Examples/BULK7_FMT3_WCA_WJDC_1D/: CMakeLists.txt  README  lin_8
Examples/BULK8_MIX_FMT3_WCA_WJDC_1D/: CMakeLists.txt  README  lin_8_1
Examples/BlockSolverDriver/: cxx_main.cpp
Examples/CONT1_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/CONT2_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/CONT3_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/CONT4_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/DIFFUSION1_FMT1_WCA_1D/: CMakeLists.txt  README
Examples/DIFFUSION2_FMT1_WCA_WJDC_1D/: CMakeLists.txt  README
Examples/DIFFUSION3_FMT1_WCA_PICARD_1D/: CMakeLists.txt  README
Examples/DIFFUSION4_FMT1_WCA_3D/: CMakeLists.txt  README
Examples/DIFFUSION5_FMT1_WCA_WJDC_3D/: CMakeLists.txt  README
Examples/DIFFUSION6_FMT1_WCA_PICARD_3D/: CMakeLists.txt  README
Examples/EXP_FMT3_1D/: CMakeLists.txt  README
Examples/Ex_polyfiles/: lin_18_1sym
Examples/Ex_restarts/: 1Dpoly2dens.datg
Examples/FMT1_1D_1/: README_FMT1_1D_1
Examples/FMT1_1D_2/: README_FMT1_1D_2
Examples/FMT1_1D_3/: README  README_FMT1_1D_3
Examples/FMT1_1D_4/: README  README_FMT1_1D_4
Examples/FMT1_1D_5/: README  README_FMT1_1D_5
Examples/FMT1_1D_6/: README  README_FMT1_1D_6
Examples/FMT1_1D_7/: README_FMT1_1D_7
Examples/GEOM10_SPHERE_3D/: CMakeLists.txt  README
Examples/GEOM11_CYL_2D/: CMakeLists.txt  README
Examples/GEOM12_CYL_2D/: CMakeLists.txt  README
Examples/GEOM13_CYL_ROUGH_2D/: CMakeLists.txt  README
Examples/GEOM14_CYL_WEDGECUTOUT_2D/: CMakeLists.txt  README
Examples/GEOM15_CYL_WEDGE2TYPES_2D/: CMakeLists.txt  README
Examples/GEOM16_CYL_WEDGE2TYPES_REFLECT_2D/: CMakeLists.txt  README
Examples/GEOM17_1ELEM_1D/: CMakeLists.txt  README
Examples/GEOM18_1ELEM_2D/: CMakeLists.txt  README
Examples/GEOM19_1ELEM_3D/: CMakeLists.txt  README
Examples/GEOM1_PLANE_ROUGH_2D/: CMakeLists.txt  README
Examples/GEOM20_CYL_3D/: CMakeLists.txt  README
Examples/GEOM21_CYL_ROUGH_3D/: CMakeLists.txt  README
Examples/GEOM22_CYL_WEDGE2TYPES_3D/: CMakeLists.txt  README
Examples/GEOM23_CYL_PERIODIC_3D/: CMakeLists.txt  README
Examples/GEOM24_ATOMS_3D/: CMakeLists.txt  README
Examples/GEOM25_CYL_PORE_2D/: CMakeLists.txt  README
Examples/GEOM26_CYL_PORE_ROUGH_2D/: CMakeLists.txt  README
Examples/GEOM27_CYL_PORE_WEDGE2TYPES_2D/: CMakeLists.txt  README
Examples/GEOM28_CYLPORE_WEDGE2TYPES_3D/: CMakeLists.txt  README
Examples/GEOM29_SLITPORE_2D/: CMakeLists.txt  README
Examples/GEOM2_PLANE_ROUGH_2D/: CMakeLists.txt  README
Examples/GEOM30_TAPERED_SLITPORE_2D/: CMakeLists.txt  README
Examples/GEOM31_TAPERED_CYLPORE_3D/: CMakeLists.txt  README
Examples/GEOM32_PLANE_PERIODIC_2D/: CMakeLists.txt  README
Examples/GEOM33_PLANE_PERIODIC2_2D/: CMakeLists.txt  README
Examples/GEOM34_PLANE_PERIODIC3_2D/: CMakeLists.txt  README
Examples/GEOM35_PLANE_PERIODIC_3D/: CMakeLists.txt  README
Examples/GEOM36_PLANE_NOTCH_2D/: CMakeLists.txt  README
Examples/GEOM37_WEDGE_LINEAR_2D/: CMakeLists.txt  README
Examples/GEOM38_WEDGE_3D/: CMakeLists.txt  README
Examples/GEOM39_AMFTIP_3D/: CMakeLists.txt  README
Examples/GEOM3_PLANE_ROUGH_3D/: CMakeLists.txt  README
Examples/GEOM40_AMFTIP_HEMISPHERE_3D/: CMakeLists.txt  README
Examples/GEOM4_PLANE_ROUGH_3D/: CMakeLists.txt  README
Examples/GEOM5_PLANE_ROUGH_3D/: CMakeLists.txt  README
Examples/GEOM6_PLANE_ROUGH_VEXTINT_2D/: CMakeLists.txt  README
Examples/GEOM7_PLANE_ROUGH_VEXTINT_3D/: CMakeLists.txt  README
Examples/GEOM8_BLOCK_2D/: CMakeLists.txt  README
Examples/GEOM9_BLOCK_3D/: README  (+1 more)
src/: CMakeLists.txt  CMakeLists_with_Optika.txt  HardSphereSolverTester.cpp  Kokkos_TramontoSparseMultiplyKernelOps.hpp  Kokkos_TramontoSparseOps.hpp  Kokkos_TramontoSparseSolveKernelOps.hpp  Makefile.am  Makefile.in  MueLu_Headers.hpp  NOXLOCA_Solver.cpp  NOXLOCA_Tramonto_Group.cpp  NOXLOCA_Tramonto_Group.hpp  NOXLOCA_Tramonto_PTGroup.cpp  NOXLOCA_Tramonto_PTGroup.hpp  NOXLOCA_Tramonto_PTVector.cpp  NOXLOCA_Tramonto_PTVector.hpp  NOXLOCA_Tramonto_Vector.cpp  NOXLOCA_Tramonto_Vector.hpp  PolySolverTester.cpp  Tpetra_ApplyOp.hpp  Tpetra_CrsMatrixMixed.cpp  Tpetra_CrsMatrixMixed.hpp  Tpetra_CrsMatrixMixed_decl.hpp  Tpetra_CrsMatrixMixed_def.hpp  Tpetra_CrsMatrix_decl.hpp  Tpetra_CrsMatrix_def.hpp  Tpetra_HalfOperator.hpp  Tpetra_HalfOperatorApplyInverse.hpp  Tpetra_Headers.hpp  Tpetra_InvOperator.hpp  Tpetra_MixedMatrixOperator.hpp  Tpetra_MixedOperator.hpp  Tpetra_MixedOperatorApplyInverse.hpp  Tpetra_MultiVectorConverter.hpp  Tpetra_MultiVectorReciprocalMultiply.hpp  Tpetra_OperatorApplyInverse.hpp  Tpetra_ParameterListConverter.hpp  Tpetra_ScalingCrsMatrix.hpp  Tramonto_ConfigDefs.h  Tramonto_config.h.in  (+406 more)
(+509 files in other folders)
