## Process this file with "automake --foreign" to produce a Makefile.in
# NEVER edit the Makefile.in produced by automake or the Makefile produced
# by configure, as it will get overwritten when automake or configure
# are run -- edit Makefile.am and re-run "automake --foreign"

# Define the path to the source code, which may not be the current directory
srcdir=@srcdir@
VPATH=@srcdir@

# define which subdirectories to do recursive makes in.
SUBDIRS=src 

EXTRA_DIST = Documentation Examples guiSupport Idea TramontoGUI tram.html 
